# ai-arena-back-mr-white

./: .dockerignore  CODEBASE.md  Dockerfile  QUICK_START_API.md  README.md  agent.py  config.py  constants.py  data_export.py  docker-compose.example.yml  game.py  main.py  model_config.json  models.py  prompts.py  prompts_old.py  pyproject.toml  results.py  run_api.sh  simulation_config.json  tournament.py  utils.py
.github/workflows/: deploy.yml
api/: __init__.py  game_manager.py  main.py  models.py  routes.py  websocket_manager.py
examples/: __init__.py  example_client.py  simple_client.py
results/2025-09-16_182200_2games_5players_2o_3m/: 2games_5players_20250916_182200_games.csv  2games_5players_20250916_182200_messages.csv  2games_5players_20250916_182200_model_stats.csv  2games_5players_20250916_182200_players.csv
results/2025-09-17_001453_200games_5players_0o_5m/: 200games_5players_20250917_001453_games.csv  200games_5players_20250917_001453_model_stats.csv  200games_5players_20250917_001453_tournament_summary.csv
src/config/: config.py  constants.py
src/core/: agent.py  game.py  models.py
src/data/: data_export.py
src/prompts/: prompts.py
src/simulation/: tournament.py
